--- a/react-portfolio/public/assets2/portfolio.html
+++ b/react-portfolio/public/assets2/portfolio.html
@@ -32,7 +32,7 @@
     <li><a href="https://www.linkedin.com/in/glynis-mullan-kwok-4410651b5/">LinkedIn</a></li>
   </ul>
 </header>
-
+<body>
 <body style="background-color: cornsilk;">
   <div class="container"></div>
 
@@ -113,7 +113,7 @@
   </div>
 </main>
 </div>
-</body>
+
 
 <footer class="page-footer">
   <div class="container">
@@ -126,4 +126,5 @@
     </div>
   </div>
 </footer>
+</body>
 
