--- a/react-portfolio/public/assets2/contact.html
+++ b/react-portfolio/public/assets2/contact.html
@@ -19,7 +19,7 @@
 
       </head>
       <header>
-
+        <body>
         <body style="background-color: cornsilk;">
           <div class="container"></div>
 
@@ -101,6 +101,7 @@
   </div>
 </footer>
 </html>
+</body> 
 
           
 
@@ -108,5 +109,3 @@
   integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-</body>
-</html>
