--- a/react-portfolio/public/assets2/home.html
+++ b/react-portfolio/public/assets2/home.html
@@ -42,6 +42,7 @@
   </ul>
 </header>
 
+<body>
 <body style="background-color: cornsilk;">
   <div class="container"></div>
 
@@ -72,7 +73,7 @@
   </div>
 </main>
 </div>
-</body>
+
 
 <footer class="page-footer">
   <div class="container">
@@ -85,6 +86,7 @@
     </div>
   </div>
 </footer>
+</body>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
   integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
