--- a/react-portfolio/public/assets2/home.html
+++ b/react-portfolio/public/assets2/home.html
@@ -20,7 +20,7 @@
 
 <header>
   <nav>
-    <div class="nav-wrapper">
+    <div className="nav-wrapper">
       <a href="#!" class="brand-logo">Glynis Mullan-Kwok</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
@@ -33,7 +33,7 @@
     </div>
   </nav>
 
-  <ul class="sidenav" id="mobile-demo">
+  <ul className="sidenav" id="mobile-demo">
     <li><a href="index.html">About</a></li>
     <li><a href="portfolio.html">Portfolio</a></li>
     <li><a href="contact.html">Contact</a></li>
@@ -44,7 +44,7 @@
 
 <body>
 <body style="background-color: cornsilk;">
-  <div class="container"></div>
+  <div className="container"></div>
 
 
 
@@ -53,18 +53,18 @@
 
 <main>
 
-  <div class="container">
+  <div className="container">
     <h1>About</h1>
-    <div class="row">
-      <div class="col-md-4">
+    <div className="row">
+      <div className="col-md-4">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsH_dQJnbwcmuukZsr6Eg38iiUttKS69NZUQ&usqp=CAU" class="img-fluid"
           alt="medical computer" />
       </div>
-      <div class="col-md-8">
-        <p class="text">Northwestern University Boot Camp Student in the Full Stack Web Development course.  Experienced in HTML, CSS, JavaScript, Node, MySql, Mongo and Reactjs.</p>  
+      <div className="col-md-8">
+        <p className="text">Northwestern University Boot Camp Student in the Full Stack Web Development course.  Experienced in HTML, CSS, JavaScript, Node, MySql, Mongo and Reactjs.</p>  
       </div> 
-      <div class="col-md-8">
-          <p class="font">As a Family Nurse Practitioner, I have witnessed many changes in the medical field.  The biggest change has been the advent of computer medical record keeping.   For this reason, I chose to expand my knowledge of computers and programming.  I'm planning use this knowledge as I return to the medical field.      Thank you for checking out my website, it is a work in progress. Please come back later for updates. </p>
+      <div className="col-md-8">
+          <p className="font">As a Family Nurse Practitioner, I have witnessed many changes in the medical field.  The biggest change has been the advent of computer medical record keeping.   For this reason, I chose to expand my knowledge of computers and programming.  I'm planning use this knowledge as I return to the medical field.      Thank you for checking out my website, it is a work in progress. Please come back later for updates. </p>
       </div>
 
     </div>
@@ -75,18 +75,18 @@
 </div>
 
 
-<footer class="page-footer">
-  <div class="container">
-    <div class="3row">
-      <div class="col l3 s12">
-        <div class="container">
+<footer className="page-footer">
+  <div className="container">
+    <div className="3row">
+      <div className="col l3 s12">
+        <div className="container">
 
         </div>
       </div>
     </div>
   </div>
 </footer>
-</body>
+</bodly
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
   integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
